# Batch-47-Web-3.0

./: README.md
Nextjs/Next1/class1/: next.config.js  package-lock.json  package.json
Nextjs/Next1/class1/src/app/: layout.tsx  not-found.tsx  page.tsx
Nextjs/Next1/class1/src/app/blog/: page.tsx
Nextjs/Next1/class1/src/app/dashboard/: error.tsx  not-found.tsx  page.tsx
Nextjs/Next1/class1/src/app/react-learning/: page.tsx
Nextjs/Next1/class1/src/components/: ConditionalRendering .tsx  DisplayingData.tsx  Mybutton.tsx  RenderList.tsx  UpdatingState.tsx
Nextjs/Next1/class1/src/components/ThinkinginReact/: FilterableProductTable .tsx  (+1 more)
Nextjs/Nxt-frontend/: package-lock.json
Nextjs/Nxt-frontend/nxtfrontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
Nextjs/Nxt-frontend/nxtfrontend/src/app/: layout.tsx  page.tsx
Nextjs/Nxt-frontend/nxtfrontend/src/components/: ProductCard.tsx
Nextjs/Nxt-frontend/nxtfrontend/src/views/: Hero.tsx  ProductList.tsx
Nextjs/next/thapatechnical/yt-thapa/: package-lock.json  package.json
Typescript/TScript/: es6_export.mjs  es6_import.js  file2.txt  filees1.mjs  filesimport.js  index.js  modulefirst.js  modulesecond.js  osmodule.js  package.json
Typescript/TScript/cli-tool/: index.js  index.ts  package-lock.json  package.json  tsconfig.json
Typescript/TSpro/variables/: index.js  index.ts
learn_python/01_poetry_pro/01_test_poetry/: README.md  pyproject.toml
learn_python/01_poetry_pro/01_test_poetry/01_test_poetry/: main.py
learn_python/01_poetry_pro/01_test_poetry/tests/: test_myproject.py
(+10 files in other folders)
